--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mysql2": "^3.5.2",
     "pg": "^8.11.1"
   }
 }
